--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </h1>
         <nav>
           <ul>
-            <li><a href="#">ホーム</a></li>
-            <li><a href="#">メニュー一覧</a></li>
-            <li><a href="#">ご予約</a></li>
+            <li><a href="https://hangyo-saisai.github.io/jobar/">ホーム</a></li>
+            <li><a href="https://hangyo-saisai.github.io/menu_jobar/">メニュー一覧</a></li>
+            <li><a href="https://hangyo-saisai.github.io/jobar_contact/">ご予約</a></li>
           </ul>
         </nav>
 
